[package]
name = "accountant_lib"
version = "0.4.2"
license = "GPL-3.0-only"
authors = ["Substratum Services"]
copyright = "Copyright (c) 2017-2019, Substratum LLC (https://substratum.net) and/or its affiliates. All rights reserved."
description = ""
edition = "2018"
workspace = "../node"

[dependencies]
actix = "= 0.5.7" # upgrading causes flakiness
sub_lib = { path = "../sub_lib" }

[dependencies.rusqlite]
version = "0.16.0"
features = ["bundled"]

[dev-dependencies]
test_utils = { path = "../test_utils" }

[lib]
name = "accountant_lib"
path = "src/lib.rs"
