[package]
name = "automap"
version = "1.0.0"
authors = ["Dan Wiebe <dnwiebe@gmail.com>", "MASQ"]
license = "GPL-3.0-only"
copyright = "Copyright (c) 2019-2021, MASQ (https://masq.ai) and/or its affiliates. All rights reserved."
description = "Library full of code to make routers map ports through firewalls"
edition = "2021"
#workspace = "../node"

[dependencies]
crossbeam-channel = "0.5.0"
igd = "0.12.0"
flexi_logger = "0.17.1"
lazy_static = "1.4.0"
local_ipaddress = "0.1.3"
log = "0.4.8"
masq_lib = { path = "../masq_lib" }
port_scanner = "0.1.5"
pretty-hex = "0.1.0"
rand = {version = "0.7.0", features = ["getrandom", "small_rng"]}

[[bin]]
name = "automap"
path = "src/main.rs"

[lib]
name = "automap_lib"
path = "src/lib.rs"
