[package]
name = "automap"
version = "0.7.3"
authors = ["Dan Wiebe <dnwiebe@gmail.com>", "MASQ"]
license = "GPL-3.0-only"
description = "Library full of code to make routers map ports through firewalls"
edition = "2021"
#workspace = "../node"

[dependencies]
crossbeam-channel = "0.5.12"
igd = "0.12.1"
flexi_logger = "0.28.0"
lazy_static = "1.4.0"
local_ipaddress = "0.1.3"
log = "0.4.21"
masq_lib = { path = "../masq_lib" }
port_scanner = "0.1.5"
pretty-hex = "0.4.1"
rand = {version = "0.8.5", features = ["getrandom", "small_rng"]}

[dev-dependencies]
regex = "1.5.4"

[[bin]]
name = "automap"
path = "src/main.rs"

[lib]
name = "automap_lib"
path = "src/lib.rs"

[features]
no_test_share = []
