[package]
name = "automap"
version = "0.8.0"
authors = ["Dan Wiebe <dnwiebe@gmail.com>", "MASQ"]
license = "GPL-3.0-only"
description = "Library full of code to make routers map ports through firewalls"
edition = "2021"
#workspace = "../node"

[dependencies]
crossbeam-channel = "0.5.0"
igd = "0.12.0"
flexi_logger = "0.28.5"
lazy_static = "1.5.0"
local_ipaddress = "0.1.3"
log = "0.4.8"
masq_lib = { path = "../masq_lib" }
port_scanner = "0.1.5"
pretty-hex = "0.4.1"
rand = {version = "0.8.5", features = ["getrandom", "small_rng"]}


[dev-dependencies]
regex = "1.9.4"

[[bin]]
name = "automap"
path = "src/main.rs"

[lib]
name = "automap_lib"
path = "src/lib.rs"

[features]
no_test_share = []
