[package]
name = "dns_utility"
version = "1.0.0"
license = "GPL-3.0-only"
authors = ["Substratum Services"]
copyright = "Copyright (c) 2017-2019, Substratum LLC (https://substratum.net) and/or its affiliates. All rights reserved."
description = "Command-line utility to turn DNS subversion on and off"
edition = "2018"

[dependencies]
regex = "1.3.7"
libc = "0.2.69"
masq_lib = { path = "../masq_lib" }


[target.'cfg(target_os = "macos")'.dependencies]
system-configuration = "0.3.0"
core-foundation = "0.6.4"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.7.0"
ipconfig = "0.2.1"

[dev-dependencies]

[[bin]]
name = "dns_utility"
path = "src/main.rs"

[[bin]]
name = "dns_utilityw"
path = "src/main_win.rs"

[lib]
name = "dns_utility_lib"
path = "src/lib.rs"

cargo-bundle = "0.4.0"
