[package]
name = "dns_utility"
version = "0.7.3"
license = "GPL-3.0-only"
authors = ["Dan Wiebe <dnwiebe@gmail.com>", "MASQ"]
copyright = "Copyright (c) 2019, MASQ (https://masq.ai) and/or its affiliates. All rights reserved."
description = "Command-line utility to turn DNS subversion on and off"
edition = "2021"

[dependencies]
regex = "1.10.4"
libc = "0.2.154"
masq_lib = { path = "../masq_lib" }


[target.'cfg(target_os = "macos")'.dependencies]
system-configuration = "0.6.0"
core-foundation = "0.9.4"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52.0"
ipconfig = "0.3.2"

[dev-dependencies]

[[bin]]
name = "dns_utility"
path = "src/main.rs"

[[bin]]
name = "dns_utilityw"
path = "src/main_win.rs"

[lib]
name = "dns_utility_lib"
path = "src/lib.rs"

cargo-bundle = "0.4.0"
