[package]
name = "dns_utility"
version = "0.8.2"
license = "GPL-3.0-only"
authors = ["Dan Wiebe <dnwiebe@gmail.com>", "MASQ"]
copyright = "Copyright (c) 2019, MASQ (https://masq.ai) and/or its affiliates. All rights reserved."
description = "Command-line utility to turn DNS subversion on and off"
edition = "2021"

[dependencies]
regex = "1.5.4"
libc = "0.2.107"
masq_lib = { path = "../masq_lib" }


[target.'cfg(target_os = "macos")'.dependencies]
system-configuration = "0.4.0"
core-foundation = "0.7.0"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.10.1"
ipconfig = "0.2.2"

[dev-dependencies]

[[bin]]
name = "dns_utility"
path = "src/main.rs"

[[bin]]
name = "dns_utilityw"
path = "src/main_win.rs"

[lib]
name = "dns_utility_lib"
path = "src/lib.rs"

cargo-bundle = "0.4.0"
