[package]
name = "entry_dns_lib"
version = "0.3.3"
license = "GPL-3.0-only"
authors = ["Substratum Services"]
copyright = "Copyright (c) 2017-2018, Substratum LLC (https://substratum.net) and/or its affiliates. All rights reserved."
description = ""
workspace = "../node"

[dependencies]
sub_lib = { path = "../sub_lib" }

[dev-dependencies]
test_utils = { path = "../test_utils" }

[target.'cfg(unix)'.dependencies]
daemonize = "0.2.3"

[target.'cfg(windows)'.dependencies]
winservice = "0.1.1"

[lib]
name = "entry_dns_lib"
path = "src/lib.rs"

cargo-bundle = "0.2.0"
