[package]
name = "hopper_lib"
version = "0.3.1"
license = "GPL-3.0-only"
authors = ["Substratum Services"]
copyright = "Copyright (c) 2017-2018, Substratum LLC (https://substratum.net) and/or its affiliates. All rights reserved."
description = ""
workspace = "../node"

[dependencies]
serde = "1.0.24"
serde_derive = "1.0.24"
serde_cbor = "0.8.1"
sub_lib = { path = "../sub_lib" }
actix = "0.4.4"

[dev-dependencies]
test_utils = { path = "../test_utils" }

[lib]
name = "hopper_lib"
path = "src/lib.rs"
