[package]
name = "hopper_lib"
version = "0.4.1"
license = "GPL-3.0-only"
authors = ["Substratum Services"]
copyright = "Copyright (c) 2017-2019, Substratum LLC (https://substratum.net) and/or its affiliates. All rights reserved."
description = ""
workspace = "../node"

[dependencies]
actix = "= 0.5.7" # upgrading causes flakiness
serde = "1.0.80"
serde_derive = "1.0.80"
serde_cbor = "0.9.0"
sub_lib = { path = "../sub_lib" }

[dev-dependencies]
test_utils = { path = "../test_utils" }

[lib]
name = "hopper_lib"
path = "src/lib.rs"