[package]
name = "ip_country"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
authors = ["Dan Wiebe <dnwiebe@gmail.com>", "MASQ"]
description = "Handle embedding IP-address-to-country data in MASQ Node"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
itertools = "0.13.0"
lazy_static = "1.4.0"


[[bin]]
name = "ip_country"
path = "src/main.rs"

[lib]
name = "ip_country_lib"
path = "src/lib.rs"

[profile.release]
codegen-units = 1