[package]
name = "ip_country"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
authors = ["Dan Wiebe <dnwiebe@gmail.com>", "MASQ"]
description = "Handle embedding IP-address-to-country data in MASQ Node"
workspace = "../node"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.3"
chrono = "0.4"
csv = "1.3.0"
ipnetwork = "0.21.0"
itertools = "0.13.0"
lazy_static = "1.4.0"
maxminddb = "0.26.0"
rand = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
test_utilities = { path = "../test_utilities"}

[[bin]]
name = "ip_country"
path = "src/main.rs"

[[bin]]
name = "generate_dbip"
path = "src/generate_dbip.rs"

[lib]
name = "ip_country_lib"
path = "src/lib.rs"
