[package]
name = "masq"
version = "0.7.3"
authors = ["Dan Wiebe <dnwiebe@gmail.com>", "MASQ"]
license = "GPL-3.0-only"
description = "Reference implementation of user interface for MASQ Node"
edition = "2021"
workspace = "../node"

# See more keys and their definitions at  https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.6"
crossbeam-channel = { version = "0.5.1" }
ctrlc = "3.2.1"
itertools = "0.8.0"
time = {version = "0.3.11", features = [ "macros" ]}
lazy_static = "1.4.0"
linefeed = "0.6.0"
masq_lib = { path = "../masq_lib" }
num = "0.4.0"
regex = "1.5.4"
thousands = "0.2.0"
#websocket = {version = "0.26.2", default-features = false, features = ["sync"]}
tokio = "1.34.0"
futures = "0.3.30"
workflow-websocket = "0.11.0"
async-channel = "2.2.1"
async-trait = "0.1.79" # Do we need this, or it is included in some other deoendency?

[target.'cfg(not(target_os = "windows"))'.dependencies]
nix = "0.23.0"

[dev-dependencies]
atty = "0.2.14"

[lib]
name = "masq_cli_lib"
path = "src/lib.rs"

[[bin]]
name = "masq"
path = "src/main.rs"
