[package]
name = "masq"
version = "0.7.3"
authors = ["Dan Wiebe <dnwiebe@gmail.com>", "MASQ"]
license = "GPL-3.0-only"
description = "Reference implementation of user interface for MASQ Node"
edition = "2021"
workspace = "../node"

# See more keys and their definitions at  https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
itertools = "0.14.0"
lazy_static = "1.4.0"
liso = {version ="1.2.1", default-features = false, features = ["history"]}
masq_lib = { path = "../masq_lib" }
num = "0.4.3"
regex = "1.10.4"
soketto = "0.8.1"
thousands = "0.2.0"
tokio = { version = "1.34.0", features = ["io-std"] }
tokio-util = "0.7.13"
futures = "0.3.30"
async-channel = "2.3.1" # TODO could we get rid of this dependency??
async-trait = "0.1.79"

[target.'cfg(not(target_os = "windows"))'.dependencies]
nix = "0.23.0"

[dev-dependencies]
atty = "0.2.14"

[lib]
name = "masq_cli_lib"
path = "src/lib.rs"

[[bin]]
name = "masq"
path = "src/main.rs"
