[package]
name = "masq_lib"
version = "0.7.3"
authors = ["Dan Wiebe <dnwiebe@gmail.com>", "MASQ"]
license = "GPL-3.0-only"
description = "Code common to Node and masq; also, temporarily, to dns_utility"
edition = "2021"
workspace = "../node"

[dependencies]
actix = "0.13.1"
async-trait = "0.1.77"
base64 = { version = "0.21.5", features = [ "alloc" ] }
clap = {version = "4.4.6", features = [ "string", "color", "cargo" ]}
const_format = "0.2.22"
crossbeam-channel = "0.5.1"
dirs = "5.0.1"
ethereum-types = "0.14.1"
futures-util = "0.3.30"
itertools = "0.11.0"
lazy_static = "1.4.0"
log = "0.4.8"
rand = {version = "0.8.5", features = ["getrandom", "small_rng"]}
regex = "1.5.4"
rustc-hex = "2.1.0"
serde = "1.0.133"
serde_derive = "1.0.133"
serde_json = "1.0.74"
time = {version = "0.3.11", features = [ "formatting" ]}
tiny-hderive = "0.3.0"
tokio = "1.34.0"
toml = "0.7.6"
workflow-websocket = "0.11.0"
url = "1.7.2"

[features]
no_test_share = []
log_recipient_test = []

[target.'cfg(not(target_os = "windows"))'.dependencies]
nix = "0.23.0"

[lib]
name = "masq_lib"
path = "src/lib.rs"
