[package]
name = "masq_lib"
version = "0.7.3"
authors = ["Dan Wiebe <dnwiebe@gmail.com>", "MASQ"]
license = "GPL-3.0-only"
description = "Code common to Node and masq; also, temporarily, to dns_utility"
edition = "2021"
workspace = "../node"

[dependencies]
actix = "0.13.3"
async-trait = "0.1.80"
base64 = { version = "0.22.1", features = [ "alloc" ] }
clap = {version = "4.5.6", features = [ "string", "color", "cargo" ]}
const_format = "0.2.32"
crossbeam-channel = "0.5.13"
dirs = "5.0.1"
ethereum-types = "0.14.1"
futures = "0.3.30"
futures-util = "0.3.30"
itertools = "0.13.0"
lazy_static = "1.4.0"
log = "0.4.8"
rand = {version = "0.9.0-alpha.1", features = ["getrandom", "small_rng"]}
regex = "1.10.4"
rustc-hex = "2.1.0"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
time = {version = "0.3.36", features = [ "formatting" ]}
tiny-hderive = "0.3.0"
tokio = "1.38.0"
toml = "0.8.14"
workflow-websocket = "0.12.1"
url = "2.5.0"

[features]
no_test_share = []
log_recipient_test = []

[target.'cfg(not(target_os = "windows"))'.dependencies]
nix = "0.23.0"

[lib]
name = "masq_lib"
path = "src/lib.rs"
