[package]
name = "masq_lib"
version = "0.8.0"
authors = ["Dan Wiebe <dnwiebe@gmail.com>", "MASQ"]
license = "GPL-3.0-only"
description = "Code common to Node and masq; also, temporarily, to dns_utility"
edition = "2021"
workspace = "../node"

[dependencies]
actix = "0.7.9"
clap = "2.33.3"
const_format = "0.2.22"
crossbeam-channel = "0.5.1"
dirs = "4.0.0"
ethereum-types = "0.9.0"
itertools = "0.10.1"
ip_country = { path = "../ip_country"}
lazy_static = "1.4.0"
log = "0.4.8"
regex = "1.5.4"
serde = "1.0.133"
serde_derive = "1.0.133"
serde_json = "1.0.74"
time = {version = "0.3.11", features = [ "formatting" ]}
tiny-hderive = "0.3.0"
toml = "0.5.8"
websocket = {version = "0.26.2", default-features = false, features = ["sync"]}

[features]
no_test_share = []
log_recipient_test = []

[target.'cfg(not(target_os = "windows"))'.dependencies]
nix = "0.23.0"

[dev-dependencies]
test_utilities = { path = "../test_utilities"}

[lib]
name = "masq_lib"
path = "src/lib.rs"
