[package]
name = "multinode_integration_tests"
version = "0.7.3"
authors = ["Dan Wiebe <dnwiebe@gmail.com>", "MASQ"]
license = "GPL-3.0-only"
description = ""
edition = "2021"
workspace = "../node"

[dependencies]
base64 = "0.22.1"
crossbeam-channel = "0.5.1"
ethereum-types = "0.14.1"
ethsign-crypto = "0.3.0"
futures = "0.3.29"
itertools = "0.13.0"
lazy_static = "1.4.0"
log = "0.4.14"
masq_lib = { path = "../masq_lib" }
native-tls = "0.2.12"
node = { path = "../node", features = [ "expose_test_privates" ] }
pretty-hex = "0.4.0"
primitive-types = {version = "0.12.2", default-features = false, features = ["default", "rlp", "serde"] }
regex = "1.10.5"
rusqlite = {version = "0.31.0", features = ["bundled"]}
rustc-hex = "2.1.0"
serde = "1.0.130"
serde_cbor = "0.11.2"
serde_derive = "1.0.130"
serde_json = "1.0"
sha1 = "0.11.0-pre.3"
tiny-bip39 = "1.0.0"
tiny-hderive = "0.3.0"
uint = "0.9.1"
web3 = {version = "0.19.0", default-features = false, features = ["http", "http-tls"]}
websocket = {version = "0.27.1", default-features = false, features = ["sync"]}

[lib]
name = "multinode_integration_tests_lib"
path = "src/lib.rs"

[[bin]]
name = "mock_node"
path = "src/main.rs"

[dev-dependencies]
reqwest = "0.12.4"
