[package]
name = "multinode_integration_tests"
version = "0.9.0"
authors = ["Dan Wiebe <dnwiebe@gmail.com>", "MASQ"]
license = "GPL-3.0-only"
description = ""
edition = "2021"
workspace = "../node"

[dependencies]
base64 = "0.13.0"
crossbeam-channel = "0.5.1"
ethereum-types = "0.9.0"
ethsign-crypto = "0.2.1"
futures = "0.1.31"
itertools = "0.10.1"
lazy_static = "1.4.0"
log = "0.4.14"
masq_lib = { path = "../masq_lib" }
native-tls = "0.2.8"
node = { path = "../node" }
pretty-hex = "0.2.1"
primitive-types = {version = "0.5.0", default-features = false, features = ["default", "rlp", "serde"] }
regex = "1.5.4"
rusqlite = {version = "0.28.0", features = ["bundled"]}
rustc-hex = "2.1.0"
serde = "1.0.130"
serde_cbor = "0.11.2"
serde_derive = "1.0.130"
serde_json = "1.0"
sha1 = "0.6.0"
tiny-bip39 = "0.8.2"
tiny-hderive = "0.3.0"
uint = "0.9.1"
web3 = {version = "0.11.0", default-features = false, features = ["http", "tls"]}
websocket = {version = "0.26.2", default-features = false, features = ["sync"]}

[lib]
name = "multinode_integration_tests_lib"
path = "src/lib.rs"

[[bin]]
name = "mock_node"
path = "src/main.rs"

[dev-dependencies]
reqwest = "0.11.6"
