[package]
name = "neighborhood_lib"
version = "0.3.4"
license = "GPL-3.0-only"
authors = ["Substratum Services"]
copyright = "Copyright (c) 2017-2018, Substratum LLC (https://substratum.net) and/or its affiliates. All rights reserved."
workspace = "../node"

[dependencies]
actix = "0.5.7"
futures = "0.1.21"
regex = "0.2.3"
serde = "1.0.24"
serde_cbor = "0.8.1"
serde_derive = "1.0.24"
sub_lib = { path = "../sub_lib" }
tokio = "0.1.7"

[dev-dependencies]
test_utils = { path = "../test_utils" }
