[package]
name = "neighborhood_lib"
version = "0.4.1"
license = "GPL-3.0-only"
authors = ["Substratum Services"]
copyright = "Copyright (c) 2017-2019, Substratum LLC (https://substratum.net) and/or its affiliates. All rights reserved."
workspace = "../node"

[dependencies]
actix = "= 0.5.7" # upgrading causes flakiness
futures = "0.1.25"
regex = "1.0.5"
serde = "1.0.80"
serde_cbor = "0.9.0"
serde_derive = "1.0.80"
sub_lib = { path = "../sub_lib" }
tokio = "0.1.11"
sha1 = "0.6.0"

[dev-dependencies]
test_utils = { path = "../test_utils" }