[package]
name = "node"
version = "0.7.4"
license = "GPL-3.0-only"
authors = ["Dan Wiebe <dnwiebe@gmail.com>", "MASQ"]
description = "MASQ Node is the foundation of MASQ Network, an open-source network that allows anyone to allocate spare computing resources to make the internet a free and fair place for the entire world."
edition = "2021"

[workspace]
members = ["../multinode_integration_tests", "../masq_lib", "../masq"]

[dependencies]
actix = "0.13.3"
async-trait = "0.1.80"
automap = { path = "../automap"}
backtrace = "0.3.72"
base64 = "0.22.1"
bytes = "1.6.0"
time = {version = "0.3.36", features = [ "macros" ]}
clap = "4.5.6"
crossbeam-channel = "0.5.13"
dirs = "5.0.1"
ethabi = "18.0.0"
ethsign = {version = "0.9.0", default-features = false, features = ["pure-rust"]}
ethsign-crypto = "0.3.0"
ethereum-types = "0.14.1"
fdlimit = "0.3.0"
flexi_logger = { version = "0.28.1", features = [ "compress" ] }
futures-util = "0.3.30"
heck = "0.5.0"
hickory-dns = "0.24.0"
hickory-resolver = "0.24.1"
http = "1.1.0"
indoc = "2.0.5"
itertools = "0.13.0"
lazy_static = "1.4.0"
libc = "0.2.155"
libsecp256k1 = "0.7.1"
libsqlite3-sys = "0.28.0"
log = "0.4.21"
masq_lib = { path = "../masq_lib"}
paste = "1.0.15"
pretty-hex = "0.4.1"
primitive-types = {version = "0.12.2", default-features = false, features = ["default", "rlp", "serde"]}
rand = {version = "0.9.0-alpha.1", features = ["getrandom", "small_rng"]}
regex = "1.10.4"
rlp = "0.5.2"
rpassword = "7.3.1"
rusqlite = {version = "0.31.0", features = ["bundled","functions"]}
rustc-hex = "2.1.0"
secp256k1secrets = {package = "secp256k1", version = "0.29.0" }
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
serde_cbor = "0.11.2"
sha1 = "0.10.6"
sodiumoxide = "0.2.7"
sysinfo = "0.30.12"
tiny-bip39 = "1.0.0"
tiny-hderive = "0.3.0"
thousands = "0.2.0"
tokio = "1.38.0"
tokio-executor = "0.1.10"
toml = "0.8.8"
tungstenite = "0.23.0"
unindent = "0.2.3"
variant_count = "1.1.0"
web3 = {version = "0.19.0", default-features = false, features = ["http", "http-tls"]}
workflow-websocket = "0.12.1"

[target.'cfg(target_os = "macos")'.dependencies]
system-configuration = "0.6.0"
core-foundation = "0.9.3"

[target.'cfg(not(target_os = "windows"))'.dependencies]
nix = "0.29.0"
openssl = {version = "0.10.64", features = ["vendored"]}

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52.0"
ipconfig = "0.3.2"

[dev-dependencies]
base58 = "0.2.0"
jsonrpc-core = "18.0.0"
native-tls = {version = "0.2.12", features = ["vendored"]}
simple-server = "0.4.0"
serial_test_derive = "3.1.1"
serial_test = "3.1.1"
hickory-proto = "0.24.1"

[[bin]]
name = "MASQNode"
path = "src/main.rs"

[[bin]]
name = "MASQNodeW"
path = "src/main_win.rs"

[lib]
name = "node_lib"
path = "src/lib.rs"

[features]
expose_test_privates = []

#[profile.release]
#opt-level = 0