[package]
name = "node"
version = "0.8.0"
license = "GPL-3.0-only"
authors = ["Dan Wiebe <dnwiebe@gmail.com>", "MASQ"]
description = "MASQ Node is the foundation of MASQ Network, an open-source network that allows anyone to allocate spare computing resources to make the internet a free and fair place for the entire world."
edition = "2021"

[workspace]
members = ["../multinode_integration_tests", "../masq_lib", "../masq"]

[dependencies]
actix = "0.7.9"
automap = { path = "../automap"}
backtrace = "0.3.57"
base64 = "0.13.0"
bytes = "0.4.12"
time = {version = "0.3.11", features = [ "macros" ]}
clap = "2.33.3"
crossbeam-channel = "0.5.1"
dirs = "4.0.0"
ethabi = "12.0.0"
ethsign = {version = "0.7.3", default-features = false, features = ["pure-rust"]}
ethsign-crypto = "0.2.1"
ethereum-types = "0.9.0"
fdlimit = "0.2.1"
flexi_logger = { version = "0.15.12", features = [ "ziplogs" ] }
futures = "0.1.31"
heck = "0.3.3"
http = "0.2.5"
indoc = "1.0.3"
itertools = "0.10.1"
lazy_static = "1.4.0"
libc = "0.2.107"
libsecp256k1 = "0.7.0"
log = "0.4.14"
masq_lib = { path = "../masq_lib"}
paste = "1.0.6"
pretty-hex = "0.2.1"
primitive-types = {version = "0.5.0", default-features = false, features = ["default", "rlp", "serde"]}
rand = {version = "0.8.4", features = ["getrandom", "small_rng"]}
regex = "1.5.4"
rlp = "0.4.6"
rpassword = "5.0.1"
rusqlite = {version = "0.28.0", features = ["bundled","functions"]}
rustc-hex = "2.1.0"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
serde_cbor = "0.11.2"
sha1 = "0.6.0"
sodiumoxide = "0.2.2"
sysinfo = "0.21.1"
tiny-bip39 = "0.8.2"
tiny-hderive = "0.3.0"
thousands = "0.2.0"
tokio = "0.1.22"
tokio-core = "0.1.18"
toml = "0.5.8"
trust-dns = "0.17.0"
trust-dns-resolver = "0.12.0"
unindent = "0.1.7"
variant_count = "1.1.0"
web3 = {version = "0.11.0", default-features = false, features = ["http", "tls"]}
websocket = {version = "0.26.2", default-features = false, features = ["async", "sync"]}
secp256k1secrets = {package = "secp256k1", version = "0.17.2"}
uuid = "0.7.4"

[target.'cfg(target_os = "macos")'.dependencies]
system-configuration = "0.4.0"
core-foundation = "0.7.0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
nix = "0.23.0"
openssl = {version = "0.10.38", features = ["vendored"]}

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.10.1"
ipconfig = "0.2.2"

[dev-dependencies]
base58 = "0.2.0"
jsonrpc-core = "14.0.0"
native-tls = {version = "0.2.8", features = ["vendored"]}
simple-server = "0.4.0"
serial_test_derive = "0.5.1"
serial_test = "0.5.1"
trust-dns-proto = "0.8.0"

[[bin]]
name = "MASQNode"
path = "src/main.rs"

[[bin]]
name = "MASQNodeW"
path = "src/main_win.rs"

[lib]
name = "node_lib"
path = "src/lib.rs"

[features]
expose_test_privates = []

#[profile.release]
#opt-level = 0