[package]
name = "port_exposer"
version = "1.0.0-rc.2"
authors = ["Substratum Developer <substratum@substratum.net>"]
license = "GPL-3.0-only"
copyright = "Copyright (c) 2017-2019, Substratum LLC (https://substratum.net) and/or its affiliates. All rights reserved."
description = "Does port-forwarding from meta-address 0.0.0.0 to the loopback interface"
edition = "2018"

[[bin]]
name = "port_exposer"
path = "src/main.rs"
