[package]
name = "port_exposer"
version = "0.7.3"
authors = ["Dan Wiebe <dnwiebe@gmail.com>", "MASQ"]
license = "GPL-3.0-only"
description = "Does port-forwarding from meta-address 0.0.0.0 to the loopback interface"
edition = "2021"

[dependencies]
default-net = "0.22.0"

[[bin]]
name = "port_exposer"
path = "src/main.rs"
