[package]
name = "proc_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0.85",features = ["full"]}
quote = "1.0.14"
heck = "0.3.3"
paste = "1.0.6"

