[package]
name = "proxy_client_lib"
version = "0.4.1"
license = "GPL-3.0-only"
authors = ["Substratum Services"]
copyright = "Copyright (c) 2017-2019, Substratum LLC (https://substratum.net) and/or its affiliates. All rights reserved."
workspace = "../node"

[dependencies]
actix = "= 0.5.7" # upgrading causes flakiness
futures = "0.1.25"
tokio-core = "0.1.12"
serde_cbor = "0.9.0"
tokio = "0.1.11"
trust-dns-resolver = "0.9.1"
sub_lib = { path = "../sub_lib" }

[dev-dependencies]
trust-dns-proto = "0.4.0"
test_utils = { path = "../test_utils" }

[lib]
name = "proxy_client_lib"
path = "src/lib.rs"