[package]
name = "proxy_server_lib"
version = "0.3.2"
license = "GPL-3.0-only"
authors = ["Substratum Services"]
copyright = "Copyright (c) 2017-2018, Substratum LLC (https://substratum.net) and/or its affiliates. All rights reserved."
workspace = "../node"

[dependencies]
actix = "0.5.7"
serde_cbor = "0.8.1"
sub_lib = { path = "../sub_lib" }

[dev-dependencies]
test_utils = { path = "../test_utils" }

[lib]
name = "proxy_server_lib"
path = "src/lib.rs"
