[package]
name = "proxy_server_lib"
version = "0.3.5"
license = "GPL-3.0-only"
authors = ["Substratum Services"]
copyright = "Copyright (c) 2017-2018, Substratum LLC (https://substratum.net) and/or its affiliates. All rights reserved."
workspace = "../node"

[dependencies]
actix = "0.5.7"
futures = "0.1.20"
serde_cbor = "0.8.1"
tokio = "0.1.7"
sub_lib = { path = "../sub_lib" }
neighborhood_lib = { path = "../neighborhood_lib" }

[dev-dependencies]
test_utils = { path = "../test_utils" }

[lib]
name = "proxy_server_lib"
path = "src/lib.rs"
