[package]
name = "sub_lib"
version = "0.3.1"
license = "GPL-3.0-only"
authors = ["Substratum Services"]
copyright = "Copyright (c) 2017-2018, Substratum LLC (https://substratum.net) and/or its affiliates. All rights reserved."
workspace = "../node"

[dependencies]
log = "0.4.1"
chrono = "0.4.0"
regex = "0.2.5"
serde = "1.0.24"
serde_derive = "1.0.24"
serde_cbor = "0.8.1"
actix = "0.4.4"

[dev-dependencies]
test_utils = { path = "../test_utils" }

[target.'cfg(unix)'.dependencies]
daemonize = "0.2.3"

[target.'cfg(windows)'.dependencies]

[lib]
name = "sub_lib"
path = "src/lib.rs"
