[package]
name = "sub_lib"
version = "0.4.1"
license = "GPL-3.0-only"
authors = ["Substratum Services"]
copyright = "Copyright (c) 2017-2019, Substratum LLC (https://substratum.net) and/or its affiliates. All rights reserved."
workspace = "../node"

[dependencies]
actix = "= 0.5.7" # upgrading causes flakiness
base64 = "0.10.0"
chrono = "0.4.6"
futures = "0.1.25"
log = "0.4.6"
rand = "0.5.5"
regex = "1.0.5"
serde = "1.0.80"
serde_cbor = "0.9.0"
serde_derive = "1.0.80"
tokio = "0.1.11"
sha1 = "0.6.0"

[dev-dependencies]
test_utils = { path = "../test_utils" }

[target.'cfg(unix)'.dependencies]
daemonize = "0.3.0"

[target.'cfg(windows)'.dependencies]

[lib]
name = "sub_lib"
path = "src/lib.rs"