[package]
name = "test_utils"
version = "0.3.2"
license = "GPL-3.0-only"
authors = ["Substratum Services"]
copyright = "Copyright (c) 2017-2018, Substratum LLC (https://substratum.net) and/or its affiliates. All rights reserved."
workspace = "../node"
description = ""

[dependencies]
actix = "0.5.7"
chrono = "0.4.0"
log = "0.4.1"
regex = "0.2.5"
serde = "1.0.24"
serde_cbor = "0.8.1"
serde_derive = "1.0.24"
sub_lib = { path = "../sub_lib" }
