[package]
name = "test_utils"
version = "0.4.2"
license = "GPL-3.0-only"
authors = ["Substratum Services"]
copyright = "Copyright (c) 2017-2019, Substratum LLC (https://substratum.net) and/or its affiliates. All rights reserved."
workspace = "../node"
description = ""

[dependencies]
actix = "= 0.5.7" # upgrading causes flakiness
chrono = "0.4.6"
futures = "0.1.25"
lazy_static = "1.1.0"
log = "0.4.6"
regex = "1.0.5"
serde = "1.0.80"
serde_cbor = "0.9.0"
serde_derive = "1.0.80"
tokio = "0.1.15"
tokio-core = "0.1.12"
sub_lib = { path = "../sub_lib" }