[package]
name = "ui_gateway_lib"
version = "0.4.1"
license = "GPL-3.0-only"
authors = ["Substratum Services"]
copyright = "Copyright (c) 2017-2018, Substratum LLC (https://substratum.net) and/or its affiliates. All rights reserved."
description = ""
workspace = "../node"

[dependencies]
actix = "= 0.5.7" # upgrading causes flakiness
futures = "0.1.25"
serde = "1.0.80"
serde_derive = "1.0.80"
tokio = "0.1.11"
bytes = "0.4.11"
sub_lib = { path = "../sub_lib" }

[dev-dependencies]
test_utils = { path = "../test_utils" }

[dependencies.websocket]
version = "0.22.1"
default-features = false
features = ["async", "sync"]

[lib]
name = "ui_gateway_lib"
path = "src/lib.rs"
